--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-cookie-next": "^1.3.0",
+    "vue-cookies": "^1.7.4",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
