--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,23 +1,15 @@
-FROM node:14
+FROM node:14-alpine
 
-# faz da pasta 'app' o diretório atual de trabalho
+# set working directory
 WORKDIR /app
 
 # add `/app/node_modules/.bin` to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
 
-# copia os arquivos 'package.json' e 'package-lock.json' (se disponível)
-COPY package*.json ./
-
-# instala dependências do projeto
-RUN npm install @vue/cli@4.5.13 -g
+# install and cache app dependencies
+COPY package.json /app/package.json
 RUN npm install
+RUN npm install @vue/cli@3.7.0 -g
 
-# copia arquivos e pastas para o diretório atual de trabalho (pasta 'app')
-COPY . .
-
-# compila a aplicação de produção com minificação
-# RUN npm run build
-
-EXPOSE 8080
+# start app
 CMD ["npm", "run", "serve"]
