--- a/backend/.env.example
+++ b/backend/.env.example
@@ -30,10 +30,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.googlemail.com
 MAIL_PORT=465
-MAIL_USERNAME=seu email aqui
-MAIL_PASSWORD=sua senha aqui
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=seu email aqui
+MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
